offers section done

--- a/index.html
+++ b/index.html
@@ -15,32 +15,36 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="navcontainer">
-                <img src="/images/logo.svg" alt="">
-                <nav>
-                    <ul>
-                        <li><a href="">Features</a></li>
-                        <li><a href="">Team</a></li>
-                        <li><a href="">Sign In</a></li>
-                    </ul>
-                </nav>
-            </div>
-    </header>
-
     <!--* INTRODUCTION *-->
     <section class="intro">
-        <div class="container">
-            <img class="intro-img" src="/images/illustration-intro.png" alt="">
-            <div class="intro-content">
-                <h1>All your files in one secure location, accessible anywhere.</h1>
-                <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
-                <a href="" class="hero-btn">Get Started</a>
+        <header>
+            <div class="container">
+                <div class="navcontainer">
+                    <img src="/images/logo.svg" alt="">
+                    <nav>
+                        <ul>
+                            <li><a href="">Features</a></li>
+                            <li><a href="">Team</a></li>
+                            <li><a href="">Sign In</a></li>
+                        </ul>
+                    </nav>
+                </div>
+        </header>
+
+        <div class="wrapper">
+            <div class="container">
+                <img class="intro-img" src="/images/illustration-intro.png" alt="">
+                <div class="intro-content">
+                    <h1>All your files in one secure location, accessible anywhere.</h1>
+                    <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
+                    <a href="" class="hero-btn">Get Started</a>
+                </div>
             </div>
+            <img class="bg-img" src="images/bg-curvy-desktop.svg" alt="">
         </div>
-        <img class="bg-img" src="images/bg-curvy-desktop.svg" alt="">
     </section>
+
+
     <!--* OFFERS SECTION *-->
     <section class="offers">
         <div class="offers-container">
@@ -70,6 +74,21 @@
         </div>
     </section>
 
+    <section>
+        <div class="row">
+            <div class="first-col">
+                <img src="images/illustration-stay-productive.png" alt="">
+            </div>
+            <div class="second-col">
+                <h1>Stay productive, wherever you are</h1>
+                <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+                <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+                <a href="">See how Fylo works
+                    <img src="images/icon-arrow.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </section>
 
 
 
