--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
         </div>
     </section>
 
-    <section>
+
+    <!--* THIRD SECTION *-->
+    <section class="third-section">
         <div class="row">
             <div class="first-col">
                 <img src="images/illustration-stay-productive.png" alt="">
@@ -83,14 +85,64 @@
                 <h1>Stay productive, wherever you are</h1>
                 <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
                 <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
-                <a href="">See how Fylo works
-                    <img src="images/icon-arrow.svg" alt="">
-                </a>
+                <div class="link-wrapper">
+                    <div class="button-wrapper">
+                        <a href="">See how Fylo works</a>
+                        <img src="images/icon-arrow.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
+    <!--* TESTIMONIALS  *-->
+    <section class="testimonials">
+        <img class="quote" src="images/bg-quotes.png" alt="">
+        <div class="testimonials-row">
+            <div class="testimonials-col">
+                <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                <div class="profile-flex">
+                    <img src="images/profile-1.jpg" alt="">
+                    <div class="author">
+                        <h5>Satish Patel</h5>
+                        <p>Founder & CEO, Huddle</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="testimonials-col">
+                <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                <div class="profile-flex">
+                    <img src="images/profile-2.jpg" alt="">
+                    <div class="author">
+                        <h5>Bruce McKenzie</h5>
+                        <p>Founder & CEO, Huddle</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="testimonials-col">
+                <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                <div class="profile-flex">
+                    <img src="images/profile-3.jpg" alt="">
+                    <div class="author">
+                        <h5>Iva Boyd</h5>
+                        <p>Founder & CEO, Huddle</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--* CALL-TO-ACTION *-->
+    <section class="cta">
+        <div class="cta-container">
+            <div class="email-wrapper">
+                <h1>Get early access today</h1>
+                <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
