cta section done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -88,7 +89,7 @@
                 <div class="link-wrapper">
                     <div class="button-wrapper">
                         <a href="">See how Fylo works</a>
-                        <img src="images/icon-arrow.svg" alt="">
+                        <img class="arrow" src="images/icon-arrow.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -141,7 +142,55 @@
                 <h1>Get early access today</h1>
                 <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
             </div>
+            <div class="input-wrapper">
+                <input type="email" name="email" id="email" placeholder="email@example.com">
+                <div class="button-wrap">
+                    <a href=""><button class="hero-btn email-btn" type="submit">Get Started For Free</a></button>
+                </div>
+            </div>
         </div>
+    </section>
+
+    <!--* FOOTER *-->
+    <section>
+        <footer>
+            <img src="images/logo.svg" alt="logo">
+
+            <div class="footer-first">
+                <img src="images/icon-location.svg" alt="location">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+
+            <div class="footer-second">
+                <img src="images/icon-phone.svg" alt="phone">
+                <p>+1-543-123-4567</p>
+                <img src="images/icon-email.svg" alt="email">
+                <p>example@fylo.com</p>
+            </div>
+
+            <div class="footer-third">
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Jobs</a></li>
+                    <li><a href="">Press</a></li>
+                    <li><a href="">Blog</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-fourth">
+                <ul>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Terms</a></li>
+                    <li><a href="">Privacy</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-fifth">
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-instagram"></i>
+            </div>
+        </footer>
     </section>
 
 </body>
