--- a/index.html
+++ b/index.html
@@ -195,7 +195,12 @@
                     <a href=""> <i class="fa fa-twitter"></i></a>
                     <a href=""> <i class="fa fa-instagram"></i></a>
                 </div>
+            </div>
 
+            <div class="closing">
+                <p>Challenge by <a href="https://www.frontendmentor.io/challenges/fylo-dark-theme-landing-page-5ca5f2d21e82137ec91a50fd" target="_blank">Frontend Mentor</a>. Coded by
+                    <a href="https://github.com/Karllouise-code" target="_blank">Karl Louise Rito</a>
+                </p>
             </div>
         </footer>
     </section>
