--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <div class="container">
                 <div class="navcontainer">
-                    <img src="/images/logo.svg" alt="logo">
+                    <img src="images/logo.svg" alt="logo">
                     <nav>
                         <ul>
                             <li><a href="">Features</a></li>
@@ -34,7 +34,7 @@
 
         <div class="wrapper">
             <div class="container">
-                <img class="intro-img" src="/images/illustration-intro.png" alt="intro-pic">
+                <img class="intro-img" src="images/illustration-intro.png" alt="intro-pic">
                 <div class="intro-content">
                     <h1>All your files in one secure location, accessible anywhere.</h1>
                     <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
@@ -50,7 +50,7 @@
     <section class="offers">
         <div class="offers-container">
             <div class="first-offer">
-                <img src="/images/icon-access-anywhere.svg" alt="accessible">
+                <img src="images/icon-access-anywhere.svg" alt="accessible">
                 <h3>Access your files, anywhere</h3>
                 <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
             </div>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="fourth-offer">
-                <img src="images/icon-any-file.svg" alt="">
+                <img src="images/icon-any-file.svg" alt="file">
                 <h3>Store any type of file</h3>
                 <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
             </div>
@@ -80,7 +80,7 @@
     <section class="third-section">
         <div class="row">
             <div class="first-col">
-                <img src="images/illustration-stay-productive.png" alt="">
+                <img src="images/illustration-stay-productive.png" alt="productive">
             </div>
             <div class="second-col">
                 <h1>Stay productive, wherever you are</h1>
@@ -89,7 +89,7 @@
                 <div class="link-wrapper">
                     <div class="button-wrapper">
                         <a href="">See how Fylo works</a>
-                        <img class="arrow" src="images/icon-arrow.svg" alt="">
+                        <img class="arrow" src="images/icon-arrow.svg" alt="arrow">
                     </div>
                 </div>
             </div>
@@ -98,12 +98,12 @@
 
     <!--* TESTIMONIALS  *-->
     <section class="testimonials">
-        <img class="quote" src="images/bg-quotes.png" alt="">
+        <img class="quote" src="images/bg-quotes.png" alt="quotes">
         <div class="testimonials-row">
             <div class="testimonials-col">
                 <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                 <div class="profile-flex">
-                    <img src="images/profile-1.jpg" alt="">
+                    <img src="images/profile-1.jpg" alt="profile1">
                     <div class="author">
                         <h5>Satish Patel</h5>
                         <p>Founder & CEO, Huddle</p>
@@ -114,7 +114,7 @@
             <div class="testimonials-col">
                 <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                 <div class="profile-flex">
-                    <img src="images/profile-2.jpg" alt="">
+                    <img src="images/profile-2.jpg" alt="profile2">
                     <div class="author">
                         <h5>Bruce McKenzie</h5>
                         <p>Founder & CEO, Huddle</p>
@@ -125,7 +125,7 @@
             <div class="testimonials-col">
                 <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                 <div class="profile-flex">
-                    <img src="images/profile-3.jpg" alt="">
+                    <img src="images/profile-3.jpg" alt="profile3">
                     <div class="author">
                         <h5>Iva Boyd</h5>
                         <p>Founder & CEO, Huddle</p>
@@ -159,7 +159,7 @@
         <div class="footer-bg">
         </div>
         <footer>
-            <img class="footer-logo" src="images/logo.svg" alt="">
+            <img class="footer-logo" src="images/logo.svg" alt="logo">
             <div class="footer-content">
                 <div class="footer-first">
                     <img src="images/icon-location.svg" alt="location">
